@startuml

title __ALARMCLOCK's Class Diagram__\n

  namespace com.doitstudio.sleepest_master {
    namespace alarmclock {
      class com.doitstudio.sleepest_master.alarmclock.AlarmClockAudio {
          {static} ~ audioManager : AudioManager
          {static} ~ mediaPlayer : MediaPlayer
          {static} ~ ringtoneManager : Ringtone
          {static} ~ vibrator : Vibrator
          {static} - alarmClockAudioInstance : AlarmClockAudio
          - appContext : Context
          - audioVolume : int
          - countDownTimer : CountDownTimer
          - ringerMode : int
          {static} + getInstance()
          {static} + getInstanceContext()
          + init()
          + startAlarm()
          + stopAlarm()
          {static} - getAudioManager()
          - getContext()
          {static} - getMediaPlayer()
          {static} - getRingtoneManager()
          {static} - getVibrator()
          - startRingtoneWithPermission()
          - startRingtoneWithPermissionAndVibrate()
          - startRingtoneWithoutPermission()
          - startVibration()
      }
    }
  }
  

  namespace com.doitstudio.sleepest_master {
    namespace alarmclock {
      class com.doitstudio.sleepest_master.alarmclock.AlarmClockReceiver {
          {static} - context : Context
          {static} + cancelAlarm()
          {static} + cancelNotification()
          {static} + isAlarmClockActive()
          + onReceive()
          {static} + restartAlarmManager()
          {static} + startAlarmManager()
          - createNotificationChannel()
          - showFullscreenNotification()
          - showNotificationOnLockScreen()
      }
    }
  }
  

  namespace com.doitstudio.sleepest_master {
    namespace alarmclock {
      class com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity {
          - btnSnoozeAlarmLockScreen : Button
          - countDownTimer : CountDownTimer
          - isStarted : boolean
          - ivSwipeUpArrow : ImageView
          - tvSwipeUp : TextView
          # onCreate()
          # onDestroy()
          # onResume()
          - fadeColor()
          - moveView()
      }
    }
  }
  

  namespace com.doitstudio.sleepest_master {
    namespace alarmclock {
      class com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity.SwipeListener {
          ~ gestureDetector : GestureDetector
          + onTouch()
          ~ SwipeListener()
      }
    }
  }
  

  com.doitstudio.sleepest_master.alarmclock.AlarmClockAudio o-- com.doitstudio.sleepest_master.storage.DataStoreRepository : dataStoreRepository
  com.doitstudio.sleepest_master.alarmclock.AlarmClockReceiver -up-|> android.content.BroadcastReceiver
  com.doitstudio.sleepest_master.alarmclock.AlarmClockReceiver o-- com.doitstudio.sleepest_master.storage.DataStoreRepository : dataStoreRepository
  com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity o-- com.doitstudio.sleepest_master.storage.DataStoreRepository : dataStoreRepository
  com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity o-- com.doitstudio.sleepest_master.storage.DatabaseRepository : databaseRepository
  com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity o-- com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity.SwipeListener : swipeListener
  com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity +-down- com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity.SwipeListener
  com.doitstudio.sleepest_master.alarmclock.LockScreenAlarmActivity.SwipeListener .up.|> android.view.View.OnTouchListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
